# tg-reader

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/api/: messages.py
backend/config/: settings.py
backend/crud/: schemas.py
backend/dao/: messages.py
backend/model/: db.py  entities.py  init_db.py
backend/scripts/: login_telegram.py
backend/service/: telegram.py
backend/utils/: dates.py  encoder.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  constants.ts  main.ts
frontend/src/components/: ChannelSidebar.vue  FilterBar.vue  MessageTable.vue
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue
