[project]
name = "tg-reader-backend"
version = "0.1.0"
description = "Telegram channel reader backend API"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-socks[asyncio]>=2.8.0",
    "sqlalchemy>=2.0.44",
    "telethon>=1.42.0",
]
